--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -930,7 +930,7 @@
                                  <li><stong> Exit:</strong> Exit is used to close the Techforce.ai RPA Studio.</li>
                                  <li><stong> Save:</strong> It is used to save an RPA action flow with a name. The shortcut is Ctrl+S.</li>
                                  <li><stong> Save As:</strong> It is used to save an already saved document with a new name. The shortcut is Ctrl+Shift+S.</li>
-                                 <img src="{{ '/assets/images/doc-img18.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                                 <img src="{{ '/assets/images/doc-img18.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                  <p><span class="numbers">Figure 3: </span>  Techforce.ai RPA Studio File Tab</p>
                                  <li><span class="numbers">2.</span><strong> Help Tab:</strong></li>
                                  <li>The help tab displays the installed version of the studio. </li>
@@ -981,7 +981,7 @@
                             <img src="{{ '/assets/images/doc-img26.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 12: </span> Techforce RPA Studio Settings</li>
                             <p>Also, it asks Chrome should open or close at the time of exception and at the time of flow completion.</p>
-                            <img src="{{ '/assets/images/doc-img27.png' | relative_url }}" alt="image">
+                            <img src="{{ '/assets/images/doc-img27.png' | relative_url }}" alt="image" style="width:300px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 13: </span> Techforce RPA Studio Global settings</li>
                           </div>
                           <div id="Stop"  class="page-section">
@@ -1023,7 +1023,7 @@
 
                             <li> Desktop Automation</li>
                             <p>Desktop Automation is used to automate the desktop applications like Notepad, Excel, MS- Word, folders, files, images and screen functionalities using sub-actions like keyboard shortcuts, Drag and Drop, Open App, Close APP, Close File and Switch App.</p>
-                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:200px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 19: </span> Techforce RPA Studio Desktop Automation</li>
 
                             <li>3.4.2 Web Automation</li>
@@ -1035,12 +1035,12 @@
                             <p>General Action is used to automate normal desktop-based and web-based operations using Sub-Actions</p>
                             <p>The Sub-Actions like Mouse Clicks, Conditions, Excel, Loops, Jump Statements, OCR, Exceptional Handling, Files and Folders, Secure FTP, CSV, Stop, Message Box, Clipboard, Assign, Ask, HTTP API, Wait, Read, Get Credentials, Get Secret, Echo, Enter Keystrokes, Read and Module are used in General Action.</p>
                             <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:200px;margin-left:40px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 21: </span> Techforce RPA Studio General</li>
 
                             <h4 class="purple">3.4.2 Programming</h4>
                             <p>Programming Action is containing String and Technology Sub-Actions. Using String Sub-Action, the user can perform string operations and match case operations. By using Programming Sub-Action, the user can include the programming languages like JavaScript, Python, R and Auto Hotkey scripting, available to automate.</p>
-                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:200px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 23: </span> Techforce RPA Studio File Tab</li>
 
                             <h4 class="purple">3.4.2 Mail Integration</h4>
@@ -1051,7 +1051,7 @@
                             <h4 class="purple">3.4.2 Database</h4>
                             <p>The Database used to connect to the database and send or retrieve the data from the Connection: Connects to MySQL or PostgresSQL Database.</p>
                             <li><span>Execute Query: </span>Executes the database query on the connected database.</li>
-                            <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="width:100px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 25: </span> Techforce RPA Studio Database</li>
                           </div>
 
@@ -2055,19 +2055,19 @@
                            <div id="Login"  class="page-section">
                              <h4 class="skyBlue">4.2 Login</h4>
                              <p>1. To Register into eManager-Console, go to the below link,<a href="https://emc.techforce.ai/try/signup?subscriptionId=0, ">https://emc.techforce.ai/try/signup?subscriptionId=0, </a>the following Sign Up page will be displayed.</p>
-                             <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>2.	Enter the details and click on the Register button, and a mail will be sent to the registered email id for verification purpose.</p>
                              <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>3.	Click on the link and will be redirected to the eManager-console login page.</p>
-                             <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="width:350px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>4.	Now Open the Techforce.ai studio with administrator permissions, </p>
-                             <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
 
                              <p>5.	Windows will ask for permissions, click on Yes.</p>
                             <p>6.	click on the system tray icon on the taskbar, </p>
-                             <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>7.	we can find the techforce.ai studio icon, right click on the icon, select settings, select register</p>
-                             <img src="{{ '/assets/images/doc-img54.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img54.png' | relative_url }}"alt="image" class="topImg" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>8.	The below shown window will be opened, provide the details and submit, so that a worker will be created for the account.</p>
                              <img src="{{ '/assets/images/doc-img55.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>9.	 Open the Login page and enter the credentials and click on the submit button and the following screen will be displayed.</p>
@@ -2397,7 +2397,7 @@
                             <p>The screen scaling should be 100%.<p>
                             <p>The location coordinates will work only in the same resolution and scaling while executing in any environment.</p>
                             <p>For example, observe the below image.</p>
-                            <img src="{{ '/assets/images/doc-img86.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img86.png' | relative_url }}"alt="image" class="topImg" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <h5>6.	Exception handling::</h5>
                             <p>Avoid using multiple stages for global level exception handling. </p>
                             <h5>7.	Files & Folders:</h5>
@@ -2437,7 +2437,7 @@
 
                           </div>
                           <div id="OnPremise" class="page-section">
-                            <h3><span class="numbers">7.3</span>On – Premise</h3>
+                            <h3><span class="numbers">7.3</span> On – Premise</h3>
                               <img src="{{ '/assets/images/doc-img89.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
                           </div>
 
