--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -662,9 +662,9 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#Convert"><span class="numbers">3.4.4.18.17</span> <span style="margin-left:40px;">Convert to XLSX</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Insert"><span class="numbers">3.4.4.18.18</span> <span style="margin-left:40px;">Insert Column</span></a></li>
                                           </ul></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Loops"><span class="numbers">3.4.4.19</span> <span style="margin-left:35px;">Loops (For)</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#TechforceOCR"><span class="numbers">3.4.4.20</span> <span style="margin-left:35px;">Techforce OCR</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Files"><span class="numbers">3.4.4.21</span> <span style="margin-left:35px;">Files & Folders</span></a>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Loops"><span class="numbers">3.4.4.19</span> <span style="margin-left:25px;">Loops (For)</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#TechforceOCR"><span class="numbers">3.4.4.20</span> <span style="margin-left:25px;">Techforce OCR</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Files"><span class="numbers">3.4.4.21</span> <span style="margin-left:25px;">Files & Folders</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#CreateFiles"><span class="numbers">3.4.4.21.1</span> <span style="margin-left:35px;">Cteate File/Folder</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#WriteToFile"><span class="numbers">3.4.4.21.2</span> <span style="margin-left:35px;">Write to File</span></a></li>
@@ -673,7 +673,7 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#DeleteFile"><span class="numbers">3.4.4.21.5</span> <span style="margin-left:35px;">Delete File/Folder</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#ReadFile"><span class="numbers">3.4.4.21.6</span> <span style="margin-left:35px;">Read File</span></a></li>
                                           </ul></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#SecureFTP"><span class="numbers">3.4.4.22</span> <span style="margin-left:35px;">FTP & SFTP</span></a>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#SecureFTP"><span class="numbers">3.4.4.22</span> <span style="margin-left:25px;">FTP & SFTP</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Connect"><span class="numbers">3.4.4.22.1</span> <span style="margin-left:35px;">Connect</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#GetFile"><span class="numbers">3.4.4.22.2</span> <span style="margin-left:35px;">Get File</span></a></li>
@@ -685,18 +685,18 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#MoveRemoteFile"><span class="numbers">3.4.4.22.8</span> <span style="margin-left:35px;">Move Remote File</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#MoveRemoteFiles"><span class="numbers">3.4.4.22.9</span> <span style="margin-left:35px;">Move Remote Files</span></a></li>
                                           </ul></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#CSVActions"><span class="numbers">3.4.4.23</span> <span style="margin-left:35px;">CSV Actions</span></a>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#CSVActions"><span class="numbers">3.4.4.23</span> <span style="margin-left:25px;">CSV Actions</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#CSVHeader"><span class="numbers">3.4.4.23.1</span> <span style="margin-left:35px;">CSV Header</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#CSVRow"><span class="numbers">3.4.4.23.2</span> <span style="margin-left:35px;">CSV Row</span></a></li>
                                           </ul></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Programming"><span class="numbers">3.4.5</span> <span style="margin-left:25px;">Programming</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Variables"><span class="numbers">3.4.5.1</span> <span style="margin-left:25px;">Variables</span></a>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Programming"><span class="numbers">3.4.5</span> <span style="margin-left:15px;">Programming</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Variables"><span class="numbers">3.4.5.1</span> <span style="margin-left:15px;">Variables</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#StringFormat"><span class="numbers">3.4.5.1.1</span> <span style="margin-left:35px;">String Format</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#DateFormat"><span class="numbers">3.4.5.1.2</span> <span style="margin-left:35px;">Date Format</span></a></li>
                                           </ul></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Technologies"><span class="numbers">3.4.5.2</span> <span style="margin-left:35px;">Technology</span></a>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Technologies"><span class="numbers">3.4.5.2</span> <span style="margin-left:20px;">Technology</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#JavaScript"><span class="numbers">3.4.5.2.1</span> <span style="margin-left:35px;">JavaScript</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Python"><span class="numbers">3.4.5.2.2</span> <span style="margin-left:35px;">Python</span></a></li>
@@ -704,9 +704,18 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#AutoHotKey"><span class="numbers">3.4.5.2.4</span> <span style="margin-left:35px;">AutoHotKey</span></a></li>
                                           </ul></li>
 
-                                          <li style="margin-left:20px;"><a class="child 2" href="#MailIntegration"><span class="numbers">3.4.6</span> <span style="margin-left:35px;">Mail Integration</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#MailIntegration"><span class="numbers">3.4.6</span> <span style="margin-left:15px;">Mail Integration</span></a>
+                                             <ul>
+                                             <li style="margin-left:20px;"><a class="child 2" href="#Outlook"><span class="numbers">3.4.6.1</span> <span style="margin-left:35px;">Outlook </span></a>
+                                             <li style="margin-left:20px;"><a class="child 2" href="#IMAP"><span class="numbers">3.4.6.2</span> <span style="margin-left:35px;">IMAP - Read Mail</span></a>
+                                             <li style="margin-left:20px;"><a class="child 2" href="#POP3"><span class="numbers">3.4.6.3</span> <span style="margin-left:35px;">POP3 - Read Mail</span></a>
+                                             <li style="margin-left:20px;"><a class="child 2" href="#SMTP"><span class="numbers">3.4.6.4</span> <span style="margin-left:35px;">SMTP - Send Mail</span></a>
+                                             <li style="margin-left:20px;"><a class="child 2" href="#SaveAttachments"><span class="numbers">3.4.6.5</span> <span style="margin-left:35px;">Save Attachments</span></a>
 
-                                          <li style="margin-left:20px;"><a class="child 2" href="#DatabaseActions"><span class="numbers">3.4.7</span> <span style="margin-left:20px;">Database Actions</span></a>
+                                             </ul>
+                                          </li>
+
+                                          <li style="margin-left:20px;"><a class="child 2" href="#DatabaseActions"><span class="numbers">3.4.7</span> <span style="margin-left:15px;">Database Actions</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Connection"><span class="numbers">3.4.7.1</span> <span style="margin-left:20px;">Connection</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#ExecuteQuery"><span class="numbers">3.4.7.2</span> <span style="margin-left:20px;">Execute Query</span></a></li>
@@ -1913,7 +1922,10 @@
                 <p>Sending email from Outlook account and other mail providers.</p>
                 <p>Receiving email from corresponding Outlook and other mail providers.</p>
                 <p>Saving an attachment with the email.</p>
-                <h6>Outlook2016</h6>
+              </div>
+
+              <div id="Outlook"  class="page-section">
+                <h4 class="purple">3.4.6.1 Outlook2016</h4>
                 <p>The outlook2016 actions are used to read and send the mails from the Outlook application Read mail</p>
                 <h6>Read Mail</h6>
                  <p>Reads emails from configured outlook account.</p>
@@ -1931,8 +1943,9 @@
                <p>To access the body of the mail, use variableName[index].Body. To access the from the address of the mail, use variableName[index].From. To access the to address of the mail, use variableName[index].Received.</p>
                <h6>Note</h6>
                <p>We can send variable instead of direct text in to, subject, body </p>
-
-               <h5>Imap</h5>
+             </div>
+             <div id="IMAP"  class="page-section">
+               <h4 class="purple">3.4.6.2 IMAP</h4>
                <p>IMAP (Internet Message Access Protocol) is a standard email protocol that stores email messages on a mail server but allows the end-user to view and manipulate the messages as though they were stored locally on the end user's computing device(s). This allows users to organize messages into folders, have multiple client applications know which messages have been read, flag messages for urgency or follow-up and save draft messages on the server.</p>
                <h6>Read Mail</h6>
                <p>Reads email from the corresponding GMAIL account.</p>
@@ -1954,7 +1967,10 @@
                   <h6>Note</h6>
                   <p>Here array variable are used to store emails. </p>
                   <p>To access the subject of the mail, use variableName[index].Subject. To access the body of the mail, use variableName[index].Body. To access the from the address of the mail, use variableName[index].From. To access the to address of the mail, use variableName[index].Received.</p>
-                   <h6>POP3</h6>
+               </div>
+
+               <div id="POP3"  class="page-section">
+                 <h4 class="purple">3.4.6.3 POP3</h4>
                   <p>POP3 (Post Office Protocol 3) is the most recent version of a standard protocol for receiving e-mail. POP3 is a client/server protocol in which e-mail is received and held for the user by the Internet server. Periodically, the user (or user’s client e-mail receiver) checks the mail-box on the server and downloads any mail, probably using POP3.</p>
                   <h6>Read Mail</h6>
                   <p>Reads email from the corresponding GMAIL account.</p>
@@ -1972,21 +1988,26 @@
                         <p><span class="numbers"><strong>Select Variable: </strong>Store emails, which are read from the corresponding Gmail account.</p>
                         <p><span class="numbers"><strong>Note:  </strong>Here array variable is used to store emails. To access the subject of the mail, use variableName[index].Subject. To access the body of the mail, variableName[index].Body, To access the from the address of the mail, variableName[index].From, To access the to address of the mail, variableName[index].Received..</p>
                         <p><span class="numbers"><strong>Note: </strong>Here array variable is used to store emails. To access the subject of the mail, use variableName[index].Subject. To access the body of the mail, use variableName[index].Body, To access the from the address of the mail, use variableName[index].From, To access the to address of the mail, use variableName[index].Received.</p>
-                          <h6>Send mail</h6>
+                      </div>
+
+                      <div id="SMTP"  class="page-section">
+                        <h4 class="purple">SMTP-Send mail</h4>
                           <p>Send email from configured Outlook account.</p>
                           <h6>Properties Login</h6>
                           <p><span class="numbers"><strong>To: </strong>The receiver’s mail id.</p>
                            <p><span class="numbers"><strong>Subject: </strong>The subject of the mail r to be sent</p>
                           <p><span class="numbers"><strong>Body: </strong>The body of the corresponding mail..</p>
                           <p><span class="numbers"><strong>Attachments: </strong>The path of the corresponding attachment to upload on Gmail.</p>
+                     </div>
 
-                            <h5>Save Attachments</h5>
+                            <div id="SaveAttachments"  class="page-section">
+                              <h4 class="purple">Save Attachments</h4>
                             <p>Saves attachments in the local path, which is downloaded from corresponding mail account.</p>
                             <h6>Properties Login</h6>
                             <p><span class="numbers"><strong>File Path:  </strong>The corresponding folder path to save the attachment.</p>
                              <p><span class="numbers"><strong>Content to Write: </strong>Variable, which is used to get an attachment from an email.</p>
                             <p><span class="numbers"><strong>Note: </strong>If there is no attachment in an email, it will ignore automatically.</p>
-                     </div>
+                          </div>
 
                      <div id="DatabaseActions"  class="page-section">
                        <h5 class="purple">3.4.7 Database Actions</h5>
@@ -2230,22 +2251,22 @@
                          </div>
 
                          <div id="Instructions"  class="page-section">
-                             <h4 class="purple"><span class="numbers">5.1.3</span>Installation Instructions</h4>
+                             <h4 class="purple"><span class="numbers">5.1.3</span> Installation Instructions</h4>
                              <p>Refer 3.1.3</p>
                          </div>
 
                          <div id="TechforceOCR"  class="page-section">
-                             <h4 class="purple"><span class="numbers">5.1.4</span>Installing Techforce OCR</h4>
+                             <h4 class="purple"><span class="numbers">5.1.4</span> Installing Techforce OCR</h4>
                              <p>Refer 3.1.4</p>
                          </div>
 
                          <div id="Uninstall"  class="page-section">
-                             <h4 class="purple"><span class="numbers">5.1.5</span>Un-install Instructions</h4>
+                             <h4 class="purple"><span class="numbers">5.1.5</span> Un-install Instructions</h4>
                              <p>Refer 3.1.5</p>
                          </div>
 
                          <div id="Registeringworker"  class="page-section">
-                             <h4 class="purple"><span class="numbers">5.2</span>Registering worker with EM console</h4>
+                             <h4 class="purple"><span class="numbers">5.2</span> Registering worker with EM console</h4>
                              <h5>Worker creation</h5>
                              <p>This is the worker screen before a worker is created in the worker management.</p>
                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
@@ -2262,7 +2283,7 @@
                           </div>
 
                          <div id="TriggeringBots"  class="page-section">
-                             <h4 class="purple"><span class="numbers">5.3</span>Triggering Bots</h4>
+                             <h4 class="purple"><span class="numbers">5.3</span> Triggering Bots</h4>
                              <p>After login we get redirected to the Business Process screen. </p>
                              <p>Business Process, all the bots or RPA flows to be executed should be uploaded here.</p>
                              <p>To upload, click on the upload button, zip the RPA flow file, drag and drop the zip file and again click on this upload button and the RPA flow will be uploaded.</p>
