--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -561,7 +561,7 @@
                                     <li><a class="child 2" href="#Installation"><span class="numbers">3.1</span>Installation</a>
                                         <ul>
                                            <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"><span class="numbers">3.1.1</span> <span style="margin-left:5px;">Software Requirements</span></a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="HardwareRequirements"><span class="numbers">3.1.2</span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements"><span class="numbers">3.1.2</span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#InstallationInstructions"><span class="numbers">3.1.3</span> <span style="margin-left:5px;">Installation Instructions</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#InstallingTechforce OCR"><span class="numbers">3.1.4</span> <span style="margin-left:5px;">Installing Techforce OCR</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#Un-installInstructions"><span class="numbers">3.1.5</span> <span style="margin-left:5px;">Un-install Instructions</span></a></li>
