--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1991,7 +1991,7 @@
                       </div>
 
                       <div id="SMTP"  class="page-section">
-                        <h4 class="purple">SMTP-Send mail</h4>
+                        <h4 class="purple">3.4.6.4 SMTP-Send mail</h4>
                           <p>Send email from configured Outlook account.</p>
                           <h6>Properties Login</h6>
                           <p><span class="numbers"><strong>To: </strong>The receiver’s mail id.</p>
@@ -2001,7 +2001,7 @@
                      </div>
 
                             <div id="SaveAttachments"  class="page-section">
-                              <h4 class="purple">Save Attachments</h4>
+                              <h4 class="purple">3.4.6.5 Save Attachments</h4>
                             <p>Saves attachments in the local path, which is downloaded from corresponding mail account.</p>
                             <h6>Properties Login</h6>
                             <p><span class="numbers"><strong>File Path:  </strong>The corresponding folder path to save the attachment.</p>
