css changes in doc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -563,7 +563,7 @@
                                            <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"><span class="numbers">3.1.1</span> <span style="margin-left:5px;">Software Requirements</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements"><span class="numbers">3.1.2</span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#InstallationInstructions"><span class="numbers">3.1.3</span> <span style="margin-left:5px;">Installation Instructions</span></a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#InstallingTechforce OCR"><span class="numbers">3.1.4</span> <span style="margin-left:5px;">Installing Techforce OCR</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#InstallingTechforceOCR"><span class="numbers">3.1.4</span> <span style="margin-left:5px;">Installing Techforce OCR</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#Un-installInstructions"><span class="numbers">3.1.5</span> <span style="margin-left:5px;">Un-install Instructions</span></a></li>
                                         </ul>
                                     </li>
@@ -981,7 +981,7 @@
                             <p>Used to publish the developed script using the required user credentials and IP.</p>
                             <img src="{{ '/assets/images/doc-img24.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 10: </span> Techforce RPA Studio Publish</li>
-                            <img src="{{ '/assets/images/doc-img25.png' | relative_url }}" alt="image">
+                            <img src="{{ '/assets/images/doc-img25.png' | relative_url }}" alt="image" style="width:300px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 11: </span> Techforce RPA Studio Publish Configuration</li>
                           </div>
                           <div id="Settings"  class="page-section">
