--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -584,7 +584,7 @@
                                       <li><a class="child 2" href="#Action"><span class="numbers">3.4.</span> Action Library</a>
                                         <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Stage"><span class="numbers">3.4.1</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Desktop"><span class="numbers">3.4.2</span> <span style="margin-left:5px;">Desktop Automation</span></a>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#DesktopAutomation"><span class="numbers">3.4.2</span> <span style="margin-left:5px;">Desktop Automation</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Keyboard"><span class="numbers">3.4.2.1</span> <span style="margin-left:15px;">Keyboard Shortcuts</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Drag"><span class="numbers">3.4.2.2</span> <span style="margin-left:15px;">Drag and Drop</span></a></li>
