--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1185,7 +1185,7 @@
                             </ol>
                           </div>
 
-                          <div id="Read"  class="page-section">
+                          <div id="ReadTable"  class="page-section">
                             <h5 class="purple">3.4.3.2 Read Table</h5>
                             <p>We can read the data from tables in web pages.</p>
                             <ol>
@@ -1293,7 +1293,7 @@
                           </div>
 
                           <div id="General"  class="page-section">
-                            <h5 class="purple">3.4.4 General Actions</h5>
+                            <h4 class="green">3.4.4 General Actions</h4>
                             <p> The General Activities pack contains all the basic activities used for creating automation projects. These activities enable the robots to:</p>
                             <ol>
                              <li><span class="numbers">1.</span>Getting the input to robots.</li>
@@ -1302,7 +1302,7 @@
                              <li><span class="numbers">4.</span>Assigning the values to variables.</li>
                          </div>
                          <div id="EnterKeystrokes"  class="page-section">
-                           <h5 class="purple">3.4.4.1 Enter Keystrokes</h5>
+                           <h4 class="purple">3.4.4.1 Enter Keystrokes</h4>
                              <li><span class="numbers">1.</span>Send keystrokes to a UI Element. Enter by using XPath and by selecting Image.</li>
                              <h5>Properties To Web Element.</h5>
                              <li><span class="numbers">1.</span><strong>XPath:</strong>Enter Keystrokes.</li>
